--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.23",
     "lru-cache": "^5.1.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2",
